--- a/SingleSite_SingleDisturb.Rmd
+++ b/SingleSite_SingleDisturb.Rmd
@@ -18,9 +18,10 @@ Initial code for this started from the "Assimilation of disturbance" example in 
 
 "True" run
 
-```{r,echo=1:2, fig.width=7, fig.height=6}
+```{r,echo=1:2}
+#fig.width=7, fig.height=6
 set.seed(1066)
-p.dist = 0.05
+p.dist = 0.005
 n0 = 1
 nIC = 6
 r = .1
@@ -43,7 +44,7 @@ obs.sd = 0.75
 n.true=n
 n.obs = rnorm(NT,n.true,obs.sd)
 points(time,n.obs,pch=18,col=2,cex=1.5)
-legend("topleft",legend=c("truth","obs"),lwd=c(2,NA),pch=c(NA,18),col=1:2)
+legend("topright",legend=c("truth","obs"),lwd=c(2,NA),pch=c(NA,18),col=1:2)
 ## Simulate less frequent observations
 #na.seq = 1:NT; na.seq=na.seq[-seq(1,NT,by=5)]
 #n.fia = n.obs;n.fia[na.seq] <- NA
@@ -54,7 +55,7 @@ legend("topleft",legend=c("truth","obs"),lwd=c(2,NA),pch=c(NA,18),col=1:2)
 
 ```{r}
 n0.sd = n.sd
-NE = 1000
+NE = 10000
 n0s = rlnorm(NE,log(nIC),n0.sd)
 ne0 = matrix(n0s,NE,NT)
 for(i in 1:NE){
@@ -145,7 +146,7 @@ legend("topleft",legend=c("True","Obs","95%","IQR","Model"),lty=c(1,0,1,1,1),col
 
 ```{r}
 n0.sd = n.sd
-NE = 1000
+NE = 10000
 n0s = rlnorm(NE,log(nIC),n0.sd)
 ne = matrix(n0s,NE,NT)
 for(i in 1:NE){
@@ -489,7 +490,7 @@ nMC = 5000
 Xl = nIC         
 pl = 1/n.sd^2
 Na = rnorm(nMC,Xl,n.sd)
-Nf = N*NA
+Nf = Na*NA
 
 for(t in 1:NT){
   ## Forecast 
@@ -581,6 +582,10 @@ lines(Dbar,lwd=2)
 points(data$Y,pch=18,col=2)
 legend("topright",legend=c("EnKF, no disturb","EnKF, disturb","Multinomial","data","P(dist)"),
        lwd=5,col=c("orange","#b2df8a","blue","red","black"))
+
+### Save outputs required to include figure in Results
+save(data,CI.fN,time,an0.stats,an.stats,NT,Dbar,file="SSSD.RData")
+
 ```
 
 ## Todo
