--- a/discussion.Rmd
+++ b/discussion.Rmd
@@ -27,8 +27,16 @@
 * Future directions
   * Disturbance priors need to be spatially heterogenous and evolve temporally
     * Connect to state-and-transition literature
+    * shared spatial information (e.g. dispersal kernels)
   * Scaling up -> spatially implicit
     * ED2
     * Contagion
 
+* OREGON: FUTURE DIR
+  * disturbance products are 'seeing' more than is in AGB product alone
+    * also would benifit from more products (e.g. LAI)
+  * would be good to add 'memory' to algorithm so further evidence of disturbance reinforces initial detection (similar to BLC); would allow reduction in time step and greater sensor fusion
 
+* Run just the Assimilation step for simulated disturbance that vary in magnitude, process error, observation error, etc to detect sensitivity
+* Approximation of not simulating disturbed ensemble members and relying SOLEY on ensemble adjustment
+* Analytical approximation of sequential beta-binomial then KF vs full joint model
